# GraOTron

./: CMakeLists.txt  main.cpp
Headers/: CBudynek.h  CDom.h  CGra.h  CKrolestwo.h  CMagazyn.h  COsoba.h  CPlansza.h  CPole.h  CPosel.h  CSzpieg.h  CTeren.h  CWytwornia.h  CZolnierz.h
Sources/: CBudynek.cpp  CDom.cpp  CGra.cpp  CKrolestwo.cpp  CMagazyn.cpp  COsoba.cpp  CPlansza.cpp  CPole.cpp  CPosel.cpp  CSzpieg.cpp  CTeren.cpp  CWytwornia.cpp  CZolnierz.cpp
