cmake_minimum_required(VERSION 3.5)
project(GraOTron)

set(CMAKE_CXX_STANDARD 11)

add_executable(GraOTron main.cpp Headers/CGra.h Sources/CGra.cpp Sources/CKrolestwo.cpp Headers/CKrolestwo.h Sources/CPlansza.cpp Headers/CPlansza.h Sources/CPlansza.cpp Headers/CPlansza.h Sources/CTeren.cpp Headers/CTeren.h Sources/CPole.cpp Headers/CPole.h Sources/COsoba.cpp Headers/COsoba.h Sources/CBudynek.cpp Headers/CBudynek.h Sources/CMagazyn.cpp Headers/CMagazyn.h Sources/CDom.cpp Headers/CDom.h Sources/CWytwornia.cpp Headers/CWytwornia.h)
